-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 15.0.0
-
None
-
51f105e07 (15.0), 44c70b0f2 (16.0)
When running apps in integrated terminal that do have constant logs (let say every 500ms) you are unable to analyze logs since widget always scroll to bottom on new log printout.
IT shall stop auto scroll once you scroll up and enable back auto scroll once you go to bottom (same like in ubuntu terminal ie.)