Terminal: Only auto scroll when view is at end

Fixes: QTCREATORBUG-32167
Change-Id: I1c78d3cad82fe099f0a61de425fa9828b20b040d
Reviewed-by: Cristian Adam <cristian.adam@qt.io>